# Fine-Tune-Forge

./: .gitattributes  .gitignore  .replit  .replitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.agents/skills/testing-training-metrics/: SKILL.md
artifacts/api-server/: build.mjs  package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/results/07a8e4ee-4926-47b7-985b-9a0178acdc3c/: metrics.json  model.pkl  train_script.py
artifacts/api-server/results/59774dff-7ee7-47fa-a0b4-4be1096d439d/: train_script.py
artifacts/api-server/training/: exports.py  modal_trainer.py  prefetch_models.py  train.py  verify_modal.py
artifacts/api-server/uploads/: 864a0c57-ef3e-49d9-9441-12ed8f072c6a.csv
artifacts/finetuneforge/: index.html  package.json  vite.config.ts
artifacts/finetuneforge/.replit-artifact/: artifact.toml
artifacts/finetuneforge/src/: App.tsx  index.css
artifacts/ftf-showcase/: index.html  package.json
artifacts/ftf-showcase/.replit-artifact/: artifact.toml
artifacts/ftf-showcase/src/: index.css
artifacts/test-report/: index.html  package.json
artifacts/test-report/.replit-artifact/: artifact.toml
artifacts/test-report/src/: index.css
attached_assets/: Pasted-App-FineTuneForge-What-to-build-A-web-platform-where-no_1777739653715.txt  Pasted-Feature-Add-Instruction-Tuning-as-Third-Working-Task-Ty_1777801031591.txt  Pasted-Feature-Enterprise-UI-Redesign-Rework-the-app-s-visual-_1777800351589.txt  Pasted-Feature-GPU-CPU-Toggle-Modal-GPU-Backend-Add-a-compute-_1777793683261.txt  Pasted-Feature-How-to-Get-Started-Sidebar-Page-Add-a-How-to-Ge_1777803546287.txt  Pasted-Feature-Integrations-Page-User-Modal-API-Key-Management_1777804691735.txt  Pasted-Feature-Model-Library-Trained-Models-Dashboard-Add-a-My_1777799321404.txt  Pasted-Feature-Professional-SMB-Focused-Landing-Page-Create-a-_1777803931396.txt  Pasted-Feature-Rework-App-Around-Two-Working-Task-Types-Restru_1777798342903.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: jobs.ts
training/: train.py
(+79 files in other folders)
