[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "FineTuneForge Python runtime deps for api-server training scripts"
requires-python = ">=3.11,<3.13"
dependencies = [
    "modal",
    "torch",
    "transformers",
    "peft",
    "datasets",
    "scikit-learn",
    "pandas",
    "numpy",
]
